rocksdb/lib/rocksdb.h

/* Exported types */

typedef struct rocksdb_t {} rocksdb_t;
typedef struct rocksdb_backup_engine_t {} rocksdb_backup_engine_t;
typedef struct rocksdb_backup_engine_info_t {} rocksdb_backup_engine_info_t;
typedef struct rocksdb_restore_options_t {} rocksdb_restore_options_t;
typedef struct rocksdb_cache_t {} rocksdb_cache_t;
typedef struct rocksdb_compactionfilter_t {} rocksdb_compactionfilter_t;
typedef struct rocksdb_compactionfiltercontext_t {} rocksdb_compactionfiltercontext_t;
typedef struct rocksdb_compactionfilterfactory_t {} rocksdb_compactionfilterfactory_t;
typedef struct rocksdb_comparator_t {} rocksdb_comparator_t;
typedef struct rocksdb_dbpath_t {} rocksdb_dbpath_t;
typedef struct rocksdb_env_t {} rocksdb_env_t;
typedef struct rocksdb_fifo_compaction_options_t {} rocksdb_fifo_compaction_options_t;
typedef struct rocksdb_filelock_t {} rocksdb_filelock_t;
typedef struct rocksdb_filterpolicy_t {} rocksdb_filterpolicy_t;
typedef struct rocksdb_flushoptions_t {} rocksdb_flushoptions_t;
typedef struct rocksdb_iterator_t {} rocksdb_iterator_t;
typedef struct rocksdb_logger_t {} rocksdb_logger_t;
typedef struct rocksdb_mergeoperator_t {} rocksdb_mergeoperator_t;
typedef struct rocksdb_options_t {} rocksdb_options_t;
typedef struct rocksdb_compactoptions_t {} rocksdb_compactoptions_t;
typedef struct rocksdb_block_based_table_options_t {} rocksdb_block_based_table_options_t;
typedef struct rocksdb_cuckoo_table_options_t {} rocksdb_cuckoo_table_options_t;
typedef struct rocksdb_randomfile_t {} rocksdb_randomfile_t;
typedef struct rocksdb_readoptions_t {} rocksdb_readoptions_t;
typedef struct rocksdb_seqfile_t {} rocksdb_seqfile_t;
typedef struct rocksdb_slicetransform_t {} rocksdb_slicetransform_t;
typedef struct rocksdb_snapshot_t {} rocksdb_snapshot_t;
typedef struct rocksdb_writablefile_t {} rocksdb_writablefile_t;
typedef struct rocksdb_writebatch_t {} rocksdb_writebatch_t;
typedef struct rocksdb_writebatch_wi_t {} rocksdb_writebatch_wi_t;
typedef struct rocksdb_writeoptions_t {} rocksdb_writeoptions_t;
typedef struct rocksdb_universal_compaction_options_t {} rocksdb_universal_compaction_options_t;
typedef struct rocksdb_livefiles_t {} rocksdb_livefiles_t;
typedef struct rocksdb_column_family_handle_t {} rocksdb_column_family_handle_t;
typedef struct rocksdb_envoptions_t {} rocksdb_envoptions_t;
typedef struct rocksdb_ingestexternalfileoptions_t {} rocksdb_ingestexternalfileoptions_t;
typedef struct rocksdb_sstfilewriter_t {} rocksdb_sstfilewriter_t;
typedef struct rocksdb_ratelimiter_t {} rocksdb_ratelimiter_t;
typedef struct rocksdb_pinnableslice_t {} rocksdb_pinnableslice_t;
typedef struct rocksdb_transactiondb_options_t {} rocksdb_transactiondb_options_t;
typedef struct rocksdb_transactiondb_t {} rocksdb_transactiondb_t;
typedef struct rocksdb_transaction_options_t {} rocksdb_transaction_options_t;
typedef struct rocksdb_optimistictransactiondb_t {} rocksdb_optimistictransactiondb_t;
typedef struct rocksdb_optimistictransaction_options_t {} rocksdb_optimistictransaction_options_t;
typedef struct rocksdb_transaction_t {} rocksdb_transaction_t;
typedef struct rocksdb_checkpoint_t {} rocksdb_checkpoint_t;