src/rocksdb_c.nim

# Nim-RocksDB
# Copyright 2018 Status Research & Development GmbH
# Licensed under either of
#
#  * Apache License, version 2.0, ([LICENSE-APACHE](LICENSE-APACHE) or http://www.apache.org/licenses/LICENSE-2.0)
#  * GPL license, version 2.0, ([LICENSE-GPLv2](LICENSE-GPLv2) or https://www.gnu.org/licenses/old-licenses/gpl-2.0.en.html)
#
# at your option. This file may not be copied, modified, or distributed except according to those terms.

# Nim-RocksDB is a wrapper for Facebook's RocksDB
# RocksDB License
# Copyright (c) 2011-present, Facebook, Inc.  All rights reserved.
# Source code can be found at https://github.com/facebook/rocksdb
# under both the GPLv2 (found in the COPYING file in the RocksDB root directory) and Apache 2.0 License
# (found in the LICENSE.Apache file in the RocksDB root directory).

# RocksDB is derived work of LevelDB
# LevelDB License
# Copyright (c) 2011 The LevelDB Authors. All rights reserved.
# Source code can be found at https://github.com/google/leveldb
# Use of this source code is governed by a BSD-style license that can be
# found in the LevelDB LICENSE file. See the AUTHORS file for names of contributors.

## This file exposes the low-level C API of RocksDB

{.deadCodeElim: on.}
when defined(windows):
  const librocksdb = "librocksdb.dll"
elif defined(macosx):
  const librocksdb = "librocksdb.dylib"
else:
  const librocksdb = "librocksdb.so"
##  Exported types

const rocksdb_header = "rocksdb/c.h"

type
  rocksdb_t* {.importc: "rocksdb_t", header: rocksdb_header.} = object
  rocksdb_backup_engine_t* {.importc: "rocksdb_backup_engine_t", header: rocksdb_header.} = object
  rocksdb_backup_engine_info_t* {.importc: "rocksdb_backup_engine_info_t", header: rocksdb_header.} = object
  rocksdb_restore_options_t* {.importc: "rocksdb_restore_options_t", header: rocksdb_header.} = object
  rocksdb_cache_t* {.importc: "rocksdb_cache_t", header: rocksdb_header.} = object
  rocksdb_compactionfilter_t* {.importc: "rocksdb_compactionfilter_t", header: rocksdb_header.} = object
  rocksdb_compactionfiltercontext_t* {.importc: "rocksdb_compactionfiltercontext_t", header: rocksdb_header.} = object
  rocksdb_compactionfilterfactory_t* {.importc: "rocksdb_compactionfilterfactory_t", header: rocksdb_header.} = object
  rocksdb_comparator_t* {.importc: "rocksdb_comparator_t", header: rocksdb_header.} = object
  rocksdb_dbpath_t* {.importc: "rocksdb_dbpath_t", header: rocksdb_header.} = object
  rocksdb_env_t* {.importc: "rocksdb_env_t", header: rocksdb_header.} = object
  rocksdb_fifo_compaction_options_t* {.importc: "rocksdb_fifo_compaction_options_t", header: rocksdb_header.} = object
  rocksdb_filelock_t* {.importc: "rocksdb_filelock_t", header: rocksdb_header.} = object
  rocksdb_filterpolicy_t* {.importc: "rocksdb_filterpolicy_t", header: rocksdb_header.} = object
  rocksdb_flushoptions_t* {.importc: "rocksdb_flushoptions_t", header: rocksdb_header.} = object
  rocksdb_iterator_t* {.importc: "rocksdb_iterator_t", header: rocksdb_header.} = object
  rocksdb_logger_t* {.importc: "rocksdb_logger_t", header: rocksdb_header.} = object
  rocksdb_mergeoperator_t* {.importc: "rocksdb_mergeoperator_t", header: rocksdb_header.} = object
  rocksdb_options_t* {.importc: "rocksdb_options_t", header: rocksdb_header.} = object
  rocksdb_compactoptions_t* {.importc: "rocksdb_compactoptions_t", header: rocksdb_header.} = object
  rocksdb_block_based_table_options_t* {.importc: "rocksdb_block_based_table_options_t", header: rocksdb_header.} = object
  rocksdb_cuckoo_table_options_t* {.importc: "rocksdb_cuckoo_table_options_t", header: rocksdb_header.} = object
  rocksdb_randomfile_t* {.importc: "rocksdb_randomfile_t", header: rocksdb_header.} = object
  rocksdb_readoptions_t* {.importc: "rocksdb_readoptions_t", header: rocksdb_header.} = object
  rocksdb_seqfile_t* {.importc: "rocksdb_seqfile_t", header: rocksdb_header.} = object
  rocksdb_slicetransform_t* {.importc: "rocksdb_slicetransform_t", header: rocksdb_header.} = object
  rocksdb_snapshot_t* {.importc: "rocksdb_snapshot_t", header: rocksdb_header.} = object
  rocksdb_writablefile_t* {.importc: "rocksdb_writablefile_t", header: rocksdb_header.} = object
  rocksdb_writebatch_t* {.importc: "rocksdb_writebatch_t", header: rocksdb_header.} = object
  rocksdb_writebatch_wi_t* {.importc: "rocksdb_writebatch_wi_t", header: rocksdb_header.} = object
  rocksdb_writeoptions_t* {.importc: "rocksdb_writeoptions_t", header: rocksdb_header.} = object
  rocksdb_universal_compaction_options_t* {.importc: "rocksdb_universal_compaction_options_t", header: rocksdb_header.} = object
  rocksdb_livefiles_t* {.importc: "rocksdb_livefiles_t", header: rocksdb_header.} = object
  rocksdb_column_family_handle_t* {.importc: "rocksdb_column_family_handle_t", header: rocksdb_header.} = object
  rocksdb_envoptions_t* {.importc: "rocksdb_envoptions_t", header: rocksdb_header.} = object
  rocksdb_ingestexternalfileoptions_t* {.importc: "rocksdb_ingestexternalfileoptions_t", header: rocksdb_header.} = object
  rocksdb_sstfilewriter_t* {.importc: "rocksdb_sstfilewriter_t", header: rocksdb_header.} = object
  rocksdb_ratelimiter_t* {.importc: "rocksdb_ratelimiter_t", header: rocksdb_header.} = object
  rocksdb_pinnableslice_t* {.importc: "rocksdb_pinnableslice_t", header: rocksdb_header.} = object
  rocksdb_transactiondb_options_t* {.importc: "rocksdb_transactiondb_options_t", header: rocksdb_header.} = object
  rocksdb_transactiondb_t* {.importc: "rocksdb_transactiondb_t", header: rocksdb_header.} = object
  rocksdb_transaction_options_t* {.importc: "rocksdb_transaction_options_t", header: rocksdb_header.} = object
  rocksdb_optimistictransactiondb_t* {.importc: "rocksdb_optimistictransactiondb_t", header: rocksdb_header.} = object
  rocksdb_optimistictransaction_options_t* {.importc: "rocksdb_optimistictransaction_options_t", header: rocksdb_header.} = object
  rocksdb_transaction_t* {.importc: "rocksdb_transaction_t", header: rocksdb_header.} = object
  rocksdb_checkpoint_t* {.importc: "rocksdb_checkpoint_t", header: rocksdb_header.} = object

##  DB operations
